--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,21 @@
 }
 
 
+/* contactForm */
+
+.contactForm input::placeholder,
+.contactForm textarea::placeholder {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.contactForm input,
+.contactForm textarea {
+    font-size: 20px;
+    box-shadow: 0px 0px 5px #dbdbdb;
+}
+
+
 /* Footer Style */
 
 #footer {
