--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
     color: #fff;
     font-weight: 500;
     font-size: 20px;
-    width: 175px;
+    width: auto;
 }
 
 .nav_button .nav_box ul li a {
